# documentation-bots

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Dockerfile  DocumentationBots.code-workspace  README.md  docker-compose.yaml  packages.txt
cmake/: LanguageOptions.cmake  OutputOptions.cmake  setup.cmake
config/: static_config.yaml
src/: CMakeLists.txt
src/BotsServer/: CMakeLists.txt
src/CppStdDiscordBot/: CMakeLists.txt
src/CppStdTelegramBot/: Application.cpp  CMakeLists.txt
src/Discord_bot/: CMakeLists.txt  Dockerfile  bot.cc
src/Discord_bot/config/: config.yaml
src/Discord_bot/include/: BaseCommand.h  BaseCommandDiscrodBot.h  Core.h  CoreDiscordBot.h
src/Discord_bot/src/: CoreDiscordBot.cc
src/DraftBot/: Dockerfile
src/DraftBot/Discord_bot/: Dockerfile
src/Server/: CMakeLists.txt  Dockerfile  tcp_full_duplex_service.cpp
src/Server/config/: config_vars.yaml  config_vers.testing.yaml
src/Server/include/: Echo.h
src/Server/src/: Echo.cc  tcp_full_duplex_service.cpp
src/Telegram_bot/: CMakeLists.txt  Dockerfile  bot.cc
src/Telegram_bot/Telegram_bot_lib/: CoreTelegramBot.h
src/Telegram_bot/config/: config.yaml
src/Telegram_bot/include/: BaseCommandTGBot.h  Core.h  CoreTelegramBot.h
src/Telegram_bot/src/: BaseCommandTGBot.cc  BaseCommnd.cc  Core.cc  CoreTelegramBot.cc
test/: conftest.py  test_echo.py
tool/: pdf_question_test_db.py  pdf_sqlite.py
